# nml-tools

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  mypy.ini  nmlt  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
examples/01_simple/: CMakeLists.txt  main.f90  nml-config.toml  optimization.yml
examples/02_pybind/: CMakeLists.txt  README.md  nml-config.toml  pyproject.toml
examples/02_pybind/f2py/: f2py_config_store.f90
examples/02_pybind/fortran/: config_store.f90
examples/02_pybind/schema/: config.yml
examples/02_pybind/scripts/: generate.py
examples/02_pybind/src/nml_pybind_example/: __init__.py  config_wrappers.py
examples/02_pybind/tests/: test_pybind_example.py
examples/03_references/: README.md  nml-config.toml
examples/03_references/schema/: common-definitions.yml  report.yml  run-base.yml  run.yml
examples/04_derived_types/: CMakeLists.txt  README.md  pyproject.toml
examples/04_derived_types/docs/: run.md
examples/04_derived_types/f2py/: f2py_config_store.f90
examples/04_derived_types/fortran/: application_types.f90  config_store.f90
examples/04_derived_types/schema/: definitions.yml  run.yml
examples/04_derived_types/src/nml_derived_types_example/: __init__.py  config_wrappers.py
examples/04_derived_types/templates/: run.nml
examples/04_derived_types/tests/: test_derived_types_example.py
examples/05_file_profiles/: README.md  nml-config.toml  outputs.nml  run.nml
examples/05_file_profiles/schemas/: outputs.yml  physics.yml  run.yml
src/nml_tools/: __init__.py  _namelist_eval.py  _namelist_parser.py  _utils.py  cli.py  codegen_f2py.py  codegen_fortran.py  codegen_markdown.py  codegen_template.py  json2nml.py  schema.py  validate.py
src/nml_tools/gui/: __init__.py  app.py  arrays.py  fields.py  model.py
src/nml_tools/templates/: __init__.py  f2py_wrappers.f90.j2  fortran_module.f90.j2  nml_helper.f90.j2  python_wrappers.py.j2
tests/: test_cli_config.py  test_cli_gui.py  test_cli_smoke.py  test_codegen_f2py.py  test_codegen_fortran.py  test_codegen_markdown.py  test_codegen_template.py  test_enum_support.py  test_gui_arrays.py  test_gui_model.py  test_gui_widgets.py  test_json2nml.py  test_namelist_parser.py  test_schema.py  test_validate.py
tests/fixtures/01_simple/: nml-config.toml
tests/fortran_namelist/: CMakeLists.txt  conformance.f90  run.yml  standard.nml
