[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nml-tools"
version = "0.0.1"
description = "Toolbox for Fortran Namelists"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "jsonschema",
    "f90nml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
"nml-tools" = "nml_tools.cli:main"
"nmlt" = "nml_tools.cli:main"

[tool.hatch.build]
packages = [{include = "nml_tools", from = "src"}]
