[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nml-tools"
dynamic = ["version"]
description = "Toolbox for Fortran Namelists"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "jsonschema",
    "f90nml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage[toml]",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
"nml-tools" = "nml_tools.cli:main"
"nmlt" = "nml_tools.cli:main"

[project.urls]
Homepage = "https://github.com/MuellerSeb/nml-tools"
Repository = "https://github.com/MuellerSeb/nml-tools"
Issues = "https://github.com/MuellerSeb/nml-tools/issues"

[tool.hatch.build]
packages = [{include = "nml_tools", from = "src"}]

[tool.hatch.version]
path = "src/nml_tools/__init__.py"

[tool.coverage.run]
source = ["src/nml_tools"]

[tool.coverage.report]
show_missing = true
